# fediplace-backend

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yml  config.toml.example
adapters/: Cargo.toml  clippy.toml
adapters/src/: lib.rs
adapters/src/incoming/: mod.rs
adapters/src/incoming/http_axum/: docs.rs  error_mapper.rs  mod.rs  router_ext.rs  routes.rs
adapters/src/incoming/http_axum/auth/: backend.rs  mod.rs  oauth_google.rs  session.rs
adapters/src/incoming/http_axum/core/: etag.rs  extractors.rs  mod.rs
adapters/src/incoming/http_axum/dto/: common_responses.rs  mod.rs  requests.rs  responses.rs
adapters/src/incoming/http_axum/handlers/: admin.rs  auth.rs  auth_user_response.rs  ban.rs  canvas.rs  health.rs  history.rs  mod.rs  palette.rs  pixel_info.rs  tiles.rs  worlds.rs
adapters/src/incoming/http_axum/middleware/: admin_auth.rs  mod.rs  rate_limit.rs  request_id.rs  verification.rs
adapters/src/incoming/ws_axum/: buffer.rs  connection.rs  endpoint.rs  handler.rs  ip_utils.rs  mod.rs  protocol.rs  subscriptions.rs
adapters/src/outgoing/: mod.rs
adapters/src/outgoing/email_sender/: console_email_sender.rs  mod.rs  smtp_email_sender.rs  templates.rs
adapters/src/outgoing/events_broadcast/: mod.rs  tokio_broadcast.rs
adapters/src/outgoing/image_rs/: mod.rs  webp_codec_image.rs
adapters/src/outgoing/passwords/: argon2.rs
adapters/src/outgoing/postgres_sqlx/: ban_store_postgres.rs  credit_store_postgres.rs  mod.rs  pixel_history_store_postgres.rs  user_store_postgres.rs  utils.rs  world_store_postgres.rs
adapters/src/outgoing/redis_deadpool/: keys.rs  mod.rs  subscription_redis.rs  tile_cache_redis.rs
adapters/src/outgoing/tokio_spawn/: mod.rs  webp_timeout_tokio.rs
adapters/src/shared/: app_state.rs  mod.rs  net.rs
application/: Cargo.toml  clippy.toml  deny.toml
application/src/: config.rs  error.rs  infrastructure_config.rs  lib.rs
application/src/admin/: service.rs
application/src/auth/: mod.rs  password_validator.rs  service.rs
application/src/ban/: service.rs
application/src/canvas/: service.rs
application/src/contracts/: subscriptions.rs
application/src/ports/incoming/: admin.rs  auth.rs  ban.rs  mod.rs  subscriptions.rs  tiles.rs
application/src/ports/outgoing/: ban_store.rs  blocking_task.rs  credit_store.rs  email_sender.rs  events.rs  image_codec.rs  mod.rs  palette_compression.rs  password_hasher.rs  pixel_history_store.rs  subscription_port.rs  task_spawn.rs  tile_cache.rs  timeout.rs  user_store.rs  world_store.rs
application/src/subscriptions/: service.rs
application/src/tiles/: commands.rs  gateway.rs  mod.rs  service.rs  util.rs
application/src/world/: service.rs
domain/: Cargo.toml  clippy.toml  deny.toml
domain/src/: action.rs  auth.rs  ban.rs  canvas_config.rs  color.rs  coords.rs  credits.rs  error.rs  events.rs  lib.rs  tile.rs  world.rs
migrations/: 20250921140529_initial_schema.down.sql  20250921140529_initial_schema.up.sql  20250923052310_user_roles.down.sql  20250923052310_user_roles.up.sql  20250928062521_banned_users.up.sql  20251001195219_add_worlds_system.down.sql  20251001195219_add_worlds_system.up.sql  20251015214930_add_world_palettes.down.sql  20251015214930_add_world_palettes.up.sql
server/: Cargo.toml
server/src/: config_loader.rs  lib.rs  main.rs
server/src/bootstrap/: router.rs  state.rs
server/src/observability/: mod.rs  startup_info.rs  tracing.rs
