[package]
name = "fedi-wplace-application"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[features]
adapters = []
axum = []
sqlx = []
deadpool-redis = []
image = []

[dependencies]
async-trait.workspace = true
domain = { path = "../domain" }
figment.workspace = true
rand.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
zxcvbn.workspace = true

[lints]
workspace = true
